--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY = AIzaSyABtf-9FYAydvcm4P7PkQTdrY-znAbIlIM
-REACT_APP_FIREBASE_APP_ID = 1:83588237446:web:381045282afdd3fdc76907
-REACT_APP_FIREBASE_AUTH_DOMAIN = tracking-practice.firebaseapp.com
-REACT_APP_FIREBASE_MEASUREMENT_ID = G-4E6PDRN0N2
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 83588237446
-REACT_APP_FIREBASE_PROJECT_ID = tracking-practice
-REACT_APP_FIREBASE_STORAGE_BUCKET = tracking-practice.appspot.com
+REACT_APP_FIREBASE_API_KEY = AIzaSyCvp4HzofurR0UZ5yDPSCrnYFS_MxSeRcE
+REACT_APP_FIREBASE_APP_ID = 1:1018520016911:web:13de3a7f974b23555dab7a
+REACT_APP_FIREBASE_AUTH_DOMAIN = tracking-11552.firebaseapp.com
+REACT_APP_FIREBASE_MEASUREMENT_ID = G-ZL7LP8ZE4Y
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 1018520016911
+REACT_APP_FIREBASE_PROJECT_ID = tracking-11552
+REACT_APP_FIREBASE_STORAGE_BUCKET = tracking-11552.appspot.com
